Firefox dev-icon vertical stretch fix

--- a/css/main.css
+++ b/css/main.css
@@ -219,7 +219,7 @@ a:active {
 .dev-icon {
     margin: 20px;
     max-width: 150px;
-    max-height: auto;
+    max-height: 218px;
     padding-top: 50px;
     padding-bottom: 50px;
 }
